--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi[standard]>=0.115.12",
+    "langchain-ollama>=0.3.3",
     "ruff>=0.11.13",
 ]
