--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,5 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.115.12",
     "langchain-ollama>=0.3.3",
+    "langchain-postgres>=0.0.14",
+    "psycopg>=3.2.9",
     "ruff>=0.11.13",
 ]
