--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
         ipv4_address: ${DB_IP:-172.28.0.30}
     volumes:
       - bd_pgdata:/var/lib/postgresql/data
+      - ./database/seed.sql:/docker-entrypoint-initdb.d/seed.sql
  
   backend:
     image: bd_backend:latest
