--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,23 @@
     "start": "vinxi start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.0",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-router": "^1.120.18",
     "@tanstack/react-router-devtools": "^1.120.18",
     "@tanstack/react-start": "^1.120.18",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.513.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.57.0",
     "tailwind-merge": "^2.6.0",
-    "vinxi": "0.5.3"
+    "tw-animate-css": "^1.3.4",
+    "vinxi": "0.5.3",
+    "zod": "^3.25.56"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
