--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,19 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.0",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/postcss": "^4.1.8",
+    "@tanstack/react-query": "^5.80.6",
     "@tanstack/react-router": "^1.120.18",
     "@tanstack/react-router-devtools": "^1.120.18",
+    "@tanstack/react-router-with-query": "^1.120.18",
     "@tanstack/react-start": "^1.120.18",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.513.0",
@@ -26,6 +31,7 @@
     "react-hook-form": "^7.57.0",
     "tailwind-merge": "^3.3.0",
     "tw-animate-css": "^1.3.4",
+    "uuid": "^11.1.0",
     "vinxi": "0.5.3",
     "zod": "^3.25.56"
   },
@@ -34,6 +40,7 @@
     "@types/node": "^22.5.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.1.8",
