--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.8",
     "typescript": "^5.7.2",
     "vite-tsconfig-paths": "^5.1.4"
