✨ (main.py): implement streaming endpoint for chat messages, enhancing real-time interaction with session validation and message history retrieval, and update dependencies for improved functionality.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.115.12",
+    "langchain-community>=0.3.21",
     "langchain-ollama>=0.3.3",
     "langchain-postgres>=0.0.14",
     "psycopg>=3.2.9",
