--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,9 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
+RUN apt-get update \
+    && apt-get -y install libpq-dev gcc
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
