--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,31 +1,53 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.11
+aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
+asyncpg==0.30.0
+attrs==25.3.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.2.1
+dataclasses-json==0.6.7
 dnspython==2.7.0
 email-validator==2.2.0
 fastapi==0.115.12
 fastapi-cli==0.0.7
+frozenlist==1.6.2
+greenlet==3.2.3
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
+httpx-sse==0.4.0
 idna==3.10
 jinja2==3.1.6
 jsonpatch==1.33
 jsonpointer==3.0.0
+langchain==0.3.25
+langchain-community==0.3.24
 langchain-core==0.3.64
 langchain-ollama==0.3.3
+langchain-postgres==0.0.14
+langchain-text-splitters==0.3.8
 langsmith==0.3.45
 markdown-it-py==3.0.0
 markupsafe==3.0.2
+marshmallow==3.26.1
 mdurl==0.1.2
+multidict==6.4.4
+mypy-extensions==1.1.0
+numpy==1.26.4
 ollama==0.5.1
 orjson==3.10.18
 packaging==24.2
+pgvector==0.3.6
+propcache==0.3.1
+psycopg==3.2.9
+psycopg-pool==3.2.6
 pydantic==2.11.5
 pydantic-core==2.33.2
+pydantic-settings==2.9.1
 pygments==2.19.1
 python-dotenv==1.1.0
 python-multipart==0.0.20
@@ -34,16 +56,21 @@ requests==2.32.3
 requests-toolbelt==1.0.0
 rich==14.0.0
 rich-toolkit==0.14.7
+ruff==0.11.13
 shellingham==1.5.4
 sniffio==1.3.1
+sqlalchemy==2.0.41
 starlette==0.46.2
 tenacity==9.1.2
 typer==0.16.0
 typing-extensions==4.14.0
+typing-inspect==0.9.0
 typing-inspection==0.4.1
+ulid-py==1.1.0
 urllib3==2.4.0
 uvicorn==0.34.3
 uvloop==0.21.0
 watchfiles==1.0.5
 websockets==15.0.1
+yarl==1.20.0
 zstandard==0.23.0
