--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vinxi dev",
     "build": "vinxi build",
-    "start": "vinxi start"
+    "start": "node -r dotenv/config .output/server/index.mjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.0",
@@ -27,6 +27,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.513.0",
     "react": "^19.0.0",
