--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tanstack-start-example-basic",
+  "name": "bard-frontend",
   "private": true,
   "sideEffects": false,
   "type": "module",
