--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: ./ollama        
       dockerfile: Dockerfile
     ports:
-      - "11435:11434"
+      - "${OLLAMA_PORT:-11434}:11434"
     volumes:
       - bd_ollama_data:/root/.ollama
     environment:
@@ -34,7 +34,7 @@ services:
     restart: always
     container_name: bd_database
     ports:
-      - "${POSTGRES_PORT}:5432"
+      - "${POSTGRES_PORT:-5432}:5432"
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
