✨ (docker-compose.yml, README.md): add healthcheck configuration for backend service in docker-compose and update README to include unit tests section for improved documentation.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,12 @@ services:
     depends_on:
       - database
       - ollama
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
   frontend:
     image: bd_frontend:latest
     container_name: bd_frontend
