--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,6 +92,12 @@ services:
       - backend
       - ollama
       - database
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
 
 volumes:
   bd_ollama_data:
