✨ (pyproject.toml, uv.lock, utils.py, .gitignore, tests): add pytest for testing, enhance session ID validation, and create initial test suite for backend functionality.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,13 @@ dependencies = [
     "langchain-ollama>=0.3.3",
     "langchain-postgres>=0.0.14",
     "psycopg>=3.2.9",
+    "pytest>=8.4.0",
     "ruff>=0.11.13",
     "ulid-py>=1.1.0",
 ]
+
+[tool.pytest.ini_options]
+pythonpath = [
+    "."
+]
+testpaths = ["tests"]
