--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.5.0",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.513.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
@@ -37,6 +38,7 @@
     "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "tw-animate-css": "^1.3.4",
     "uuid": "^11.1.0",
