--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
-      start_period: 10s 
+      start_period: 60s
   database:
     image: postgres:16
     restart: always
@@ -38,6 +38,11 @@ services:
     volumes:
       - bd_pgdata:/var/lib/postgresql/data
       - ./database/seed.sql:/docker-entrypoint-initdb.d/seed.sql
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
  
   backend:
     image: bd_backend:latest
@@ -58,13 +63,15 @@ services:
       bd_network:
         ipv4_address: "172.28.0.20"
     depends_on:
-      - database
-      - ollama
+      database:
+        condition: service_healthy
+      ollama:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 10s
       timeout: 5s
-      retries: 3
+      retries: 10
       start_period: 10s
   frontend:
     image: bd_frontend:latest
@@ -82,14 +89,17 @@ services:
       bd_network:
         ipv4_address: "172.28.0.40"
     depends_on:
-      - backend
-      - ollama
-      - database
+      backend:
+        condition: service_healthy
+      ollama:
+        condition: service_healthy
+      database:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
       interval: 10s
       timeout: 5s
-      retries: 3
+      retries: 10
       start_period: 10s
 
 volumes:
