🔧 (Dockerfile): remove VITE_BACKEND_BASE_URL argument and environment variable setup for streamlined configuration management.

--- a/.env.example
+++ b/.env.example
@@ -3,14 +3,15 @@ POSTGRES_HOST=localhost
 POSTGRES_USER=myuser
 POSTGRES_PASSWORD=mypassword
 POSTGRES_DB=mydatabase
-POSTGRES_PORT=5432
+HOST_POSTGRES_PORT=5432
 
 # OLLAMA
-OLLAMA_PORT=11434
+HOST_OLLAMA_PORT=11434
 
 # BACKEND
-BACKEND_PORT=8000
+HOST_BACKEND_PORT=8000
 OLLAMA_BASE_URL=http://localhost:11434
 
 # FRONTEND
-VITE_BACKEND_BASE_URL=http://localhost:8000
+HOST_FRONTEND_PORT=3000
+BACKEND_BASE_URL=http://localhost:8000
