--- a/docker-compose.nvidia.yml
+++ b/docker-compose.nvidia.yml
@@ -22,6 +22,13 @@ services:
       timeout: 5s
       retries: 3
       start_period: 1s
+    deploy: # If you do not have an Nvidia GPU, remove this section
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
   database:
     image: postgres:16
     restart: always
